k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-svc
  namespace: url-shortener
spec:
  type: NodePort
  selector:
    app: url-shortener
  ports:
    - name: http
      port: 80
      targetPort: 3001
      nodePort: 30080
