k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  namespace: url-shortener
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: short.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: url-shortener-svc
                port:
                  number: 80
